docs: update benchmark results with v2 unified proxy performance